add log in webui
